--- a/docs/zavrsni.tex
+++ b/docs/zavrsni.tex
@@ -58,7 +58,7 @@
 \maketitle
 
 % Ispis stranice s napomenom o umetanju izvornika rada. Uklonite naredbu \izvornik ako želite izbaciti tu stranicu.
-\izvornik
+% \izvornik
 
 % Dodavanje zahvale ili prazne stranice. Ako ne želite dodati zahvalu, naredbu ostavite radi prazne stranice.
 \zahvala{}
@@ -75,11 +75,11 @@ Pojam \textbf{središnjeg autoriteta} opisuje agenciju ili organizaciju koja osi
 
 \chapter{Elektronički novac}
 
-Pokazalo se da je u praksi novac najpraktičniji opće prihvaćeni oblik razmjene dobara u obliku trajnog zapisa (u fizičkom ili digitalnom obliku).
+Ispostavilo se da je novac najpraktičniji oblik razmjene dobara u obliku trajnog zapisa (u fizičkom ili digitalnom obliku) kada ono što on supstituira nije odmah dostupno. On je trajni zapis koji vlasniku garantira da će mu njegova usluga biti uzvraćena u obliku drugačijeg dobra. Važno je razumjeti da suvremene tehnike ostvarenja takvog sustava nisu jedine te da postoje drugi načini za postizanje istog benefita kojeg nam on donosi.
 
 \section{Postojeći sustavi novca}
 Tradicionalni bankarski sustavi zasnovani su na računalima poslužiteljima koji pohranjuju stanje sustava u relacijskim bazama podataka te upravljaju korisničkim sjednicama, obavljaju autentifikaciju i autorizaciju te barataju transakcijama i stanjima računa. Centralizirana priroda ovakvog sustava osigurava konzistentnost sustava kroz vrijeme, lakše atomične operacije prijenosa sredstava, ali ona ima i neke nedostatke. \\
-Naime, pošto ne postoji jedna globalna banka, nastaje problem kako se razmjenjuju sredstva na međunarodnoj razini. Kao primjer jednog rješenja tog problema valjalo bi spomenuti SWIFTNet mrežu \cite{enwiki:1021608159}. SWIFT je osnovan 1973. te je do danas prošao kroz brojne migracije protokola kako bi se od 2001. do 2004. migriralo sa zastarijelog X.25 mrežnog protokola na internet protokol (IP), a kao serijalizacijski format za razmjenu poruka koristi XML. Tada je nastao novi skup standarda (ISO 20022-1: 2004 i ISO 20022-2:2007, Financial services – Universal Financial Industry message scheme). Kasnije je ponovno nadograđivan te je danas on poznat pod nazivom SWIFTNet Phase 2. Taj bi sustav trebao olakšati i u konačnici potpuno standardizirati razmjenu financijskih poruka između banaka u svijetu. Važno je napomenuti da SWIFTNet ne služi za transakcije među bankama već za delegaciju poruka plaćanja lokalnom bankarskom sustavu pri međunarodnoj trgovini. \\ 
+Naime, pošto ne postoji jedna globalna banka, nastaje problem kako se razmjenjuju sredstva na međunarodnoj razini. Kao primjer jednog rješenja tog problema valjalo bi spomenuti SWIFTNet mrežu \cite{enwiki:1021608159}. SWIFT je osnovan 1973. te je do danas prošao kroz brojne revizije protokola kako bi se od 2001. do 2004. migriralo sa zastarijelog X.25 mrežnog protokola na internet protokol (IP). Kao serijalizacijski format za razmjenu poruka koristi XML. Tada je nastao novi skup standarda (ISO 20022-1: 2004 i ISO 20022-2:2007, \textit{Financial services – Universal Financial Industry message scheme}). Kasnije je ponovno nadograđivan te je danas on poznat pod nazivom \textit{SWIFTNet Phase 2}. Taj bi sustav trebao olakšati i u konačnici potpuno standardizirati razmjenu financijskih poruka između banaka u svijetu. Važno je napomenuti da SWIFTNet ne služi za transakcije među bankama već za delegaciju poruka plaćanja lokalnom bankarskom sustavu pri međunarodnoj trgovini. \\ 
 
 Također poznato je da postoje i manje organizacije nalik na SWIFT na razini lokalnih organizacijskih jedinica u državama. Ukratko, većina banaka i dalje ima brojne domenski specifične servise i način funkcioniranja, no ide se prema implementiranju ovog standarda.
 
@@ -144,7 +144,13 @@ A        &= \mathrm{BASE58}(K_{hash} \mathbin\Vert C_{sum})
 gdje $ V $ označava verziju protokola.
 
 \subsection{Merkleovo stablo}
-Struktura podataka nazvana po znanstveniku Ralphu Merkleu koji ju je patentirao 1979. godine. Ona je binarno stablo sažetaka u kojem su listovi obični sažetci blokova podataka a svaki roditelj ima dvoje djece čiji se sažetak računa kao $$ H(H(C_{left}) \mathbin\Vert H(C_{right})) $$.
+Pretpostavimo da želimo kontinuirano kroz vijeme određivati sažetak niza podataka koji
+Naivno bismo vjerojatno prvo došli na ideju da pri svakom proširenju niza podataka, ponovno izračunamo sažetak niza svih elemenata. Pretpostavimo da je duljina svakog niza $d$ te da je vremenska složenost funkcije sažetka $O(n)$ za niz duljine $n \cdot d$. Cijena uzastopnog ažuriranja sažetka takve rastuće strukture 
+$$
+C_{sažetak} \cdot \sum_{d=0}^{n} d = C_{sažetak} \cdot \frac{n^2}{2}
+$$
+što je $O(n^2)$ i izrazitno skupo. Stoga je Ralph Merkle predložio stablastu strukturu za rješenje tog problema koju je patentirao 1979. godine. To je binarno stablo sažetaka u kojem su listovi obični sažetci blokova podataka a svaki roditelj ima dvoje djece čiji se sažetak računa kao $$ H(H(C_{left}) \mathbin\Vert H(C_{right})) $$.
+Uključivanje nove transakcije u lanac stranica ima složenost $O(log(n))$ (može se pretpostaviti da je složenost računanja $H(\{0,1\}^C \approx C')$) zato što pri dodavanju novog podatka u list stabla potrebno je samo ažurirati granu koja vodi do korijena stabla (engl. \textit{Merkle root}).
 \subsection{Stranica}
 Stranica je struktura podataka koja ima rezervirana specijalna polja za sljedeće informacije:
 \begin{itemize}
@@ -159,12 +165,12 @@ Stranica je struktura podataka koja ima rezervirana specijalna polja za sljedeć
 \end{itemize}
 
 \subsection{Transakcija}
-Transakcije u Bitcoin mreži organizirane su u takozvane nepotrošene izlaze (engl. \textit{UTXO - Unspent Transaction Output}) koji se sastoje od varijabilnog broja ulaza (\textit{TxIn}) i 2 izlaza (\textit{TxOut})
+Transakcije u Bitcoin mreži organizirane su u takozvane nepotrošene izlaze (engl. \textit{UTXO - Unspent Transaction Output}) koji se sastoje od varijabilnog broja ulaza (\textit{TxIn}) i 2 izlaza (\textit{TxOut}). Razlog za dva izlaza jest kako bi mogli poslati samo dio iznosa na nečiju adresu, a ostatak natrag usmjeriti na vlastitu. Broj ulaza varira jer možemo primiti više iznosa s više adresa.
 
 % =========================
 
 \subsection{Validacija transakcija digitalnim potpisima}
-Bitcoin, nesumnjivo vodeća kriptovaluta današnjice, jedan je od jednostavnijih primjera implementacije protokola za digitalni novac temeljen na ideji lanca stranica. Objasnit ćemo ukratko ideju rada Bitcoina i njegova ograničenja. Čvorovi Bitcoin mreže postižu suglasje takozvanim rudarenjem što je zapravo uzastopno ponavljanje operacija izračunavanja SHA-256 sažetka stranice (engl. \textit{ledger}) konkateniranog s nekom vrijednosti koju rudar mora pronaći kako bi zadovoljio zahtjev mreže - a to je da konačni sažetak ima prefiks od $N$ 0-bitova. Broj N zove se težina (difficulty) te je on direktno povezan s vjerojatnošću pronalaženja takvog sažetka. To se radi kako bi čvor koji uspješno pronađe taj sažetak mogao dokazati ostatku mreže da je on (u prosjeku) uložio vrijeme proporcionalno broju zahtjevanih prefiks nula. Ostatak mreže mu mora vjerovati jer ne postoji prečica kojom bi se predvidjela vrijednost funkcije sažetka bez da ju zapravo provedemo. Integritet Bitcoin lanca oslanja se na uvjerenje da je SHA-256 kriptografski sigurna funkcija sažetka. Opisat ćemo u nekoliko koraka proces kojim bi zamišljeni aktori Alice i Bob proveli transakciju u Bitcoin mreži:
+Bitcoin, nesumnjivo vodeća kriptovaluta današnjice, jedan je od jednostavnijih primjera implementacije protokola za digitalni novac temeljen na ideji lanca stranica. Objasnit ćemo ukratko ideju rada Bitcoina i njegova ograničenja. Čvorovi Bitcoin mreže postižu suglasje takozvanim rudarenjem što je zapravo uzastopno ponavljanje operacija izračunavanja SHA-256 sažetka stranice (engl. \textit{ledger}) konkateniranog s nekom vrijednosti koju rudar mora pronaći kako bi zadovoljio zahtjev mreže - a to je da konačni sažetak ima prefiks od $N$ nul-bitova. Broj N zove se težina (difficulty) te je on direktno povezan s vjerojatnošću pronalaženja takvog sažetka. To se radi kako bi čvor koji uspješno pronađe taj sažetak mogao dokazati ostatku mreže da je on (u prosjeku) uložio vrijeme proporcionalno broju zahtjevanih prefiks nula. Ostatak mreže mu mora vjerovati jer ne postoji prečica kojom bi se predvidjela vrijednost funkcije sažetka bez da ju zapravo provedemo. Integritet Bitcoin lanca oslanja se na uvjerenje da je SHA-256 kriptografski sigurna funkcija sažetka. Opisat ćemo u nekoliko koraka proces kojim bi zamišljeni aktori Alice i Bob proveli transakciju u Bitcoin mreži:
 \begin{enumerate}
 	\item Alice i Bob izgeneriraju kriptografske ključeve shemom digitalnog potpisa.
 	\item Alice izradi transakciju u kojoj navodi da šalje Bob-u određeni iznos novaca. Alice zatim potpiše tu izjavu (claim) svojim tajnim ključem te ju objavi u mrežu
@@ -177,43 +183,51 @@ Bitcoin, nesumnjivo vodeća kriptovaluta današnjice, jedan je od jednostavnijih
 	
 	\item Ako je transakcija ispravna, rudar dodaje transakciju na popis u sljedeću stranicu u lancu koju treba 'izrudariti'
 	\item Važeće transakcije spremaju se u binarno stablo gdje je roditeljski sažetak jednak sažetku oba sažetka djece\footnotemark. Takva struktura podataka olakšava izračunavanje SHA sažetka bez da moramo trošiti vrijeme na ponovno izračunavanje svih starih SHA-256 sažetaka prijašnjih transakcija u stablu koje stalno raste. Pri dodavanju novih transakcija moramo samo Ažurirati jednu granu u tom stablu koja vodi do korijenskog sažetka koji u konačnici završava u opisniku stranice zajedno sa zaglavljem stranice, i odredišnom adresom rudara
-	\footnotetext{Merkle tree ili u Ethereum mreži Patricia (prefix) trie je}
+	\footnotetext{Merkle tree ili u Ethereum mreži Patricia (prefix) trie je struktura podataka koja se koristi za pohranjivanje ispravnih nepotvrđenih transakcija (više\ref{merkle}).}
 	
 	\item U stranici postoji mjesto rezervirano za poseban broj kojeg rudar traži grubom silom tako da sažetak opisnika stranice ima svojstvo koje zahtjeva mreža (N vodećih nul-bitova)\footnotemark
 	\footnotetext{Difficulty ili zahtjevnost mreže je broj vodećih 0-bitova koje sažetak lanca mora sadržavati}
 	\item Uslijed pronalaženja sažetka s odgovarajućom zahtjevnošću, on objavljuje svoju stranicu susjednim čvorovima i na taj se način nova stranica propagira kroz mrežu. Svi čvorovi preuzmu novu stranicu, prestaju sa traženjem svojeg broja te ponovno grade novu stranicu na upravo primljenoj stranici.
 	\item Čvorovi koji još nisu čuli za novu stranicu, nastavljaju se natjecati s njom. Ukoliko dođe do istovremenog rudarenja više jednakovrijednih stranica na različitim računalima, onaj koji se uspije propagirati na više čvorova ima veće izglede da će izrudariti i sljedeću stranicu zasnovanu na toj stranici te time 'pobijediti'\footnotemark \footnotemark. Prosječno vrijeme potrebno za nastanak nove stranice u Bitcoin mreži je 10 minuta (dok neki lanci stranica poput Ethereuma imaju znatno kraće vrijeme od 14 sekundi). Stoga je privremeno račvanje češća pojava u Ethereum mreži.
-	\footnotetext{Orphaned block je stranica koja je odbačena zato jer je započela kraću granu u lancu, a prema suglasju mreže, uvijek moramo graditi na najduljem lancu jer je on autoritativan te prikazuje stvarno stanje mreže. Trasakcije na odbačenim stranicama postaju nevažeće. To je jedan od razloga zašto se savjetuje da se pričeka nekoliko blokova prije nego što se vjeruje posljednjoj izrudarenoj stranici}
-	\footnotetext{Forking ili račvanje je trenutak kada se još ne zna pravo stanje mreže zbog dvije stranice nastale u bliskom vremenskom okviru. To se relativno brzo razrješava rudarenjem već sljedeće stranice nakon jedne od njih}
+	\footnotetext{\textit{Orphaned block} je stranica koja je odbačena zato jer je započela kraću granu u lancu, a prema suglasju mreže, uvijek moramo graditi na najduljem lancu jer je on autoritativan te prikazuje stvarno stanje mreže. Trasakcije na odbačenim stranicama postaju nevažeće. To je jedan od razloga zašto se savjetuje da se pričeka nekoliko blokova prije nego što se vjeruje posljednjoj izrudarenoj stranici}
+	\footnotetext{\textit{Forking} ili račvanje je trenutak kada se još ne zna pravo stanje mreže zbog dvije stranice nastale u bliskom vremenskom okviru. To se relativno brzo razrješava rudarenjem već sljedeće stranice nakon jedne od njih}
 \end{enumerate}
 
-\subsection{O vremenu stranice u Bitcoin mreži}
+\subsection{Vrijeme stranice u Bitcoin mreži}
 Pojam vrijeme stranice se odnosi na prosječno vrijeme koje protekne između rudarenja dvije uzastopne stranice u lancu. Bitcoin ima samo-podesivi mehanizam ugrađen u protokol koji brine da prosječno vrijeme za pronalaženje sažetka sljedeće stranice bude oko 10 minuta. Međutim, novi čvorovi nastaju u mreži, a neki postojeći se gase te stoga ukupna komputacijska snaga doživljava stalne fluktuacije. Rješenje za taj problem je da se broj zahtjevanih vodećih nul-bitova u bloku prilagođava obrnuto proporcionalno prosječnom vremenu mreže svakih 2016 stranica (što je okvirno 2 tjedna). Svaki rudar taj broj može nezavisno izračunati te prilagoditi svoj ciljani broj vodećih nul-bitova koje traži. Na taj način je osigurano približno konstantno vrijeme stranice.
 
 \section{Ispravnost tvrdnji u lancu stranica}
-Rudari moraju imati bazu podataka o povijesti lanca stranica te asocirane adrese uz javne ključeve za digitalne potpise transakcija\footnotemark. Također moraju pratiti nepotrošene izlaze transakcija. Sam bitcoin ne specificira implementaciju takvih baza podataka, no teži se korištenju što bolje optimizacije (indeksiranja) lanca kako bi rudari ostali kompetitivni s ostatkom mreže. Također postoje i čvorovi koji nude samo uslugu pretraživanja baze ili ogledala (mirroring). Primjerice, najpopularnija implementacija baze podataka za Bitcoin čvor koristi Google-ov LevelDB bazu podataka koja nudi brzi pristup disku u strukturi asocijativnog polja.
-\footnotetext{ Takozvani Full-Node je čvor koji čuva arhivu povijesti cijelog lanca u svrhu validiranja ispravnosti budućih transakcija, čuvanje javnih ključeva drugih korisnika za provjeravanje i izračunavanje }
 
 Transfer valute u Bitcoin mreži provodi se kroz takozvane nepotrošene izlaze transakcija\footnotemark. Svaki nepotrošeni izlaz transakcija je asociran s jednim vlasnikom (kriptografskim javnim ključem) te ga može samo vlasnik odgovarajućeg privatnog ključa poslati na neku drugu adresu. Prilikom toga, nepotrošeni izlaz može biti raspoređen na više odredišta. Stoga ako pošiljatelj ne želi poslati cijeli iznos nepotrošenog izlaza transakcije, mora svoju adresu navesti kao odredište za ostatak iznosa koji nije poslan primatelju.
 \footnotetext{Unspent Transaction Output (UTXO) je zapis koji uz sebe ima asocirane ulaze odnosno količine uplaćenog novca s jedne ili više adresa te dva izlaza koji određuju odredišne adrese. Dva izlaza služe kako bi se mogao poslati samo dio sredstava na neku drugu adresu a ostatak usmjeriti natrag u vlastitu. Skup svih nepotrošenih izlaza transakcija je valuta u cirkulaciji.}
 
+Rudari moraju imati bazu podataka nepotrošenih izlaza transakcija te pri upitima za dodavanje novih transakcija na stranicu, čvorovi im moraju poslati uz strukturu transakcije i svoj javni ključ kako bi oni mogli provjeriti njezinu ispravnost \footnotemark. Službena propozicija Bitcoina ne specificira implementaciju takvih baza podataka, no teži se korištenju što bolje optimiziranih struktura podataka (npr. indeksiranja) lanca kako bi rudari ostali kompetitivni s ostatkom mreže uz što manje nepotrebnog računanja. Također postoje i čvorovi koji nude samo uslugu pretraživanja baze ili ogledala (mirroring) te čuvaju povijest svih provedenih transakcija u mreži. Primjerice, najpopularnija implementacija baze podataka za Bitcoin čvor koristi LevelDB bazu podataka koja nudi brzi pristup disku u strukturi polja raspršenog adresiranja.
+\footnotetext{ Takozvani Full-Node je čvor koji u memoriji čuva skup nepotrošenih izlaza transakcija u svrhu validiranja ispravnosti budućih transakcija, čuvanje javnih ključeva drugih korisnika za provjeravanje }
+
+
 \section{Dokaz rada}
-Dokaz rada je osmišljen kako bi se onemogućilo zlonamjernim čvorovima da razglasuju pogrešne informacije o stanju mreže (primjer: razglase da imaju više bitcoin-a u svom vlasništvu ili više puta potroše iste bitcoin-e koje posjeduju). Dokaz rada fizički onemogućava takve pokušaje varanja zato što bi za takvo što napadač morao imati većinu računalne snage u mreži što svakako nije moguće. Međutim centralizacija je i dalje velik problem u ovakvim mrežama jer kompanije s najjačom opremom imaju najveće izglede za pronači sažetak sljedećeg bloka. Poticaj rudarima na obavljaju taj zahtjevan posao je činjenica da će prema dogovoru specifikacije biti nagrađeni određenim iznosom kriptovalute\footnotemark
+Dokaz rada je osmišljen kako bi se onemogućilo zlonamjernim čvorovima da razglasuju pogrešne informacije o stanju mreže (primjer: razglase da imaju više bitcoin-a u svom vlasništvu ili više puta potroše iste Bitcoine koje posjeduju). Dokaz rada fizički onemogućava takve pokušaje prevare zato što bi za takvo što napadač morao imati većinu računalne snage u mreži što svakako nije moguće. Međutim centralizacija je i dalje velik problem u Bitcoinu jer kompanije s najjačom opremom imaju najveće izglede za pronaći sažetak sljedećeg bloka \cite{9160462}. Poticaj rudarima na obavljaju taj zahtjevan posao je činjenica da će prema dogovoru specifikacije biti nagrađeni određenim iznosom kriptovalute\footnotemark
 \footnotetext{Block reward}
-Kako bi rudari imali interesa uopće uključivati transakcije i graditi Merkle stabla, biti će dodatno nagrađeni i od svake obrađene transakcije prema informaciji koju je izdavatelj odredio. Zato su transakcije organizirane u prioritetni red - rudarima se više isplati prvo obrađivati transakcije sa višom naknadom te će one prije biti potvrđene. Moguć je scenarij da transakcije nikada ne budu uključene na popis stranice jer imaju prenisku naknadu, a u red prevelikom brzinom dolaze nove transakcije. Međutim, ne možemo biti sigurni da nikada neće biti potvrđena transakcija sa niskom naknadom. Mehanizam otkazivanja transakcija ne postoji te je velik rizik ostaviti ju u bazenu. Novac se može \textit{spasiti} dvostrukom potrošnjom\footnotemark na drugi vlastiti račun uz znatno višu naknadu kako bi bila potvrđena prije navedene 'spore' transakcije.
-\footnotetext{Double spending}
+Kako bi rudari imali interesa uopće uključivati transakcije i graditi Merkleova stabla, biti će dodatno nagrađeni i od svake obrađene transakcije prema informaciji koju je izdavatelj odredio. Zato su transakcije organizirane u prioritetni red - rudarima se više isplati prvo obrađivati transakcije sa višom naknadom te će one prije biti potvrđene. Moguć je scenarij da transakcije nikada ne budu uključene na popis stranice jer naprosto imaju prenisku naknadu, a ispred nje u red prevelikom brzinom dolaze nove transakcije. Međutim, ne možemo biti sigurni da nikada neće biti potvrđena transakcija sa niskom naknadom. Mehanizam otkazivanja transakcija ne postoji te je velik rizik ostaviti ju u prioritetnom redu rudara. Novac se može \textit{"spasiti"} dvostrukom potrošnjom\footnotemark na drugi vlastiti račun uz znatno višu naknadu kako bi bila potvrđena prije navedene 'spore' transakcije.
+\footnotetext{\textit{Double spending} je pojava kada napravimo trnsakciju (ili sumu transakcija) većeg iznosa no što posjedujemo. Nakon validiranja transakcija za koje imamo dovoljan iznos novaca, doći će na red naša stara transakcija te verifikacija neće uspijeti jer je \textit{TxOut} već potrošen. Rudari takve upite odbacuju.}
 
 \subsection{Negativne strane dokaza rada}
-U teoretskom napadu\footnotemark od 51\% snage radi se upravo o tome da grupa koordiniranih zlonamjernih čvorova može zamrznuti ostale rudare od natjecanja za sljedeću stranicu. Kada bi se našla takva hipotetska organizacija, ništa ju ne bi moglo zaustaviti i ne postoji pravi način da se mreža zaštiti od takvog napada. Oni bi mogli generirati prazne stranice (što je potpuno legalno) te ih periodički propuštati ostatku mreže kako bi odustali od svojeg uzaludnog rada. Sav rad poštenih čvorova u mreži bio bi uzaludan i stranice bi bile važeće i prazne. Ovaj se napad najčešće zanemaruje zbog neizglednosti da će jedna organizacija ikad imati procesorsku većinu. Međutim, statistike pokazuju drugačije - distribucija računalne snage između koordiniranih rudarskih bazena je vrlo segregirana i postoji stvarna prijetnja od ovakvog napada. Mreža nije toliko decentralizirana koliko je bilo planirano.
+U teoretskom napadu\footnotemark od 51\% snage radi se upravo o tome da grupa koordiniranih zlonamjernih čvorova može zamrznuti ostale rudare od natjecanja za sljedeću stranicu. Kada bi se našla takva hipotetska organizacija, ništa ju ne bi moglo zaustaviti i ne postoji pravi način da se mreža zaštiti od takvog napada. Oni bi mogli generirati prazne stranice (što je potpuno legalno) te ih periodički propuštati ostatku mreže kako bi odustali od svojeg uzaludnog rada. Sav rad poštenih čvorova u mreži bio bi uzaludan i stranice bi bile važeće i prazne. Ovaj se napad najčešće zanemaruje zbog neizglednosti da će jedna organizacija ikad imati procesorsku većinu. Međutim, statistike pokazuju drugačije - distribucija računalne snage između koordiniranih rudarskih bazena je vrlo segregirana i postoji stvarna prijetnja od ovakvog napada. Mreža nije toliko decentralizirana koliko je bilo planirano. Uzrok takve podjele u računalnoj snazi leži u specijaliziranom očvrsju koje koristi sklopove (FPGA, ASIC) za računanje SHA-256 sažetaka nekoliko redova veličine brže no što to mogu grafičke kartice u klasičnom računalu. SHA-256 je bio dizajniran da bude brz jer mu primarna namijena nije bila osiguravanje lanca stranica.
+
+U novijim se lancima stranica teži korištenju kriptografskih funkcija sažetaka za koje je vrlo teško napraviti efikasno specijalizirano očvrsje koje bi bilo značajno bolje od računala opće namjene. Kao primjer familije takvih funkcija valja spomenuti Keccak (NIST-ov SHA-3 standard) koji je baziran na spužvastim konstrukcijama i radi na potpuno drugačiji način.
 \footnotetext{51\% Attack...}
 
 \section{Dokaz uloga}
 Zbog neekonomičnosti mehanizma dokaza rada, koji izaziva veliko opterećenje računalnih sustava a posljedično i troši veliku količinu električne energije, javile su se nove metode postizanja suglasja u mrežama bez dokaza rada. Dokaz uloga\footnotemark \footnotetext{Proof of Stake...}
-je možda najpoznatija alternativa.Idejno on radi tako da se čvorovi validatori u mreži kandidiraju te uz vjerojatnost proporcionalnu njihovom ulogu u pametnom ugovoru, bivaju izabrani da validiraju sljedeću stranicu i time dobivaju nagradu. Pri pokušajima varanja, napadač bi trebao biti kažnjen prema suglasju mreže tako da mu se velik dio njegovog uloga oduzme što napade čini vrlo nepraktičnima. Cardano (ADA)\footnotemark \footnotetext{} je kriptovaluta koja se od svog početka oslanja na ovakav način rada, a Ethereum, unatoč tome što se oslanja na  (ETH) ima eksponencijalno povećanje složenosti svakih 100.000 stranica kako bi potaknuo što bržu tranziciju mreže na dokaz uloga. \cite{wood2014ethereum}.
+je možda najpoznatija alternativa. Idejno on radi tako da se čvorovi validatori u mreži kandidiraju te uz vjerojatnost proporcionalnu njihovom ulogu u pametnom ugovoru, bivaju izabrani da validiraju sljedeću stranicu i time dobivaju nagradu. Pri pokušajima varanja, napadač bi trebao biti kažnjen prema suglasju mreže tako da mu se velik dio njegovog uloga oduzme što napade čini vrlo nepraktičnima. Cardano (ADA)\cite{ouroboros} \footnotemark
+\footnotetext{Ouroboros je naziv algoritma dokaza uloga koja se koristi u Cardano kriptovaluti} je kriptovaluta koja se od svog početka oslanja na ovakav način rada, a Ethereum, unatoč tome što se oslanja na  (ETH) ima eksponencijalno povećanje težine svakih 100.000 stranica kako bi potaknuo što bržu tranziciju mreže na dokaz uloga. \cite{wood2014ethereum}.
+
+\subsection{Negativne strane dokaza uloga}
+Jedna od negativnih posljedica 
 
 % Premijestil sam ovo tu jer objašnjavam od jednostavnihih koncepti prema složenijima.
 \section{Metode postizanja suglasja u sustavima bez povjerenja}
-Čvorovi mreže moraju biti u suglasju oko stanja sustava kako bi mogli donositi odluke o svojim budućim akcijama. Dakle, moraju svi dijeliti isti lanac stranica. To se postiže odbacivanjem svih drugih lanaca osim autoritativnog. Odluka o tome koji je lanac autoritativan donosi se na temelju većine računalne moći iz čega sljedi i najdulji lanac. Ako u bilo kojem trenutku nastanu dvije nove stranice te se propagiraju mrežom (to se naziva račvanje lanca \textit{forking}), jedna od njih će imati većinu rudarske snage. Prije no što se ispostavi koja je ispravna, one su jednakovrijedne i upravo zbog toga se ne vjeruje posljednjoj stranici u lancu. Vjerojatnost za takvu neizvjesnost u lancu je vrlo niska te opada eksponencijalnom brzinom ukoliko napadač posjeduje manjinu snage u mreži \cite{btc, satoshi}.
+Čvorovi mreže moraju biti u suglasju oko stanja sustava kako bi mogli donositi odluke o svojim budućim akcijama. Dakle, moraju svi dijeliti isti lanac stranica. To se postiže odbacivanjem svih drugih lanaca osim autoritativnog. Odluka o tome koji je lanac autoritativan donosi se na temelju većine računalne moći iz čega sljedi i najdulji lanac. Ako u bilo kojem trenutku nastanu dvije nove stranice te se propagiraju mrežom (to se naziva račvanje lanca \textit{forking}), jedna od njih će imati većinu rudarske snage. Prije no što se ispostavi koja je ispravna, one su jednakovrijedne i upravo zbog toga se privremeno ne vjeruje posljednjoj stranici u lancu. Vjerojatnost za takvu neizvjesnost u lancu je vrlo niska te opada eksponencijalnom brzinom ukoliko napadač posjeduje manjinu snage u mreži \cite{nakamoto2012bitcoin}. Račvanje u lancima stranica se može dogoditi i promijenom u protokolu te čvorovi koji naprave tranziciju na novu verziju mogu završiti na odvojenom lancu koji efektivno postaje nova kriptovaluta. Taj se proces naziva tvrdo račvanje (engl. \textit{hard fork}) i dogodio se primjerice između Bitcoina i Bitcoin Classic.
 \begin{itemize}
 	\item Lanac stranica je robustan u smislu da je otporan na greške u sustavima zbog decentraliziranosti (Mreža radi čak i kad bilo koji pravi podskup čvorova zakaže).
 \end{itemize}
@@ -221,10 +235,10 @@ je možda najpoznatija alternativa.Idejno on radi tako da se čvorovi validatori
 % =========================
 \chapter{Simulacija postizanja suglasja}
 
-U ovom ćemo poglavlju izraditi demonstracijski softver kako bismo simulirali postizanje konsenzusa u lancu stranica u mreži s više sudionika. Koristit ćemo metodu koju koristi i Bitcoin mreža jer 
+U ovom ćemo poglavlju izraditi programsku podršku za demonstriranje simulacije postizanje konsenzusa u lancu stranica u mreži s više sudionika. Suglasje protokola bit će da je najdulji ispravni lanac autoritativan.
 
 \section{Opis}
-Implementacija je ostvarena u programskim jezicima Python i Javascript. Sastoji se od dva dijela. Backend-a čvora koji je zapravo poslužitelj s kojim komuniciramo HTTP protokolom preko REST metoda. Poslužitelj je napisan u radnom okviru Flask. Za ostvarenje spremišta ključeva, korištene su kriptografske primitive iz knjižnice PyCryptodome. Drugi dio implementacije sastoji se od front-end klijenta kojemu pristupamo kroz web preglednik. Naravno, korišten je programski jezik Javascript bez dodatnih knjižnica. Korišten je standardni asinkroni API zasnovan na obećanjima i fetch upitima koji će pozivati Flask back-end našeg čvora. Zajedno ta dva dijela čine jedan čvor u mreži. Možemo instalirati softver na više računala te simulirati njihovu međusobnu interakcij: postizanje suglasja i vršenje transakcija. Serijalizacijski format korišten za komunikaciju je JSON.
+Implementacija je ostvarena u programskim jezicima Python i Javascript. Sastoji se od dva dijela. Backend-a čvora koji je zapravo poslužitelj s kojim komuniciramo HTTP protokolom preko REST metoda. Poslužitelj je napisan u radnom okviru Flask. Aplikacije brine o generiranju ključeva za čvor i njihovog korištenja kod potpisivanja podataka. Za ostvarenje spremišta ključeva, korištene su kriptografske primitive iz knjižnice PyCryptodome. Drugi dio implementacije sastoji se od frontend klijenta kojemu pristupamo kroz web preglednik. Naravno, korišten je programski jezik Javascript bez dodatnih knjižnica. Korišten je standardni asinkroni API zasnovan na obećanjima i \texttt{fetch} upitima koji će pozivati Flask back-end našeg čvora. Zajedno ta dva dijela čine jedan čvor u mreži. Možemo instalirati softver na više računala te simulirati njihovu međusobnu interakcij: postizanje suglasja i vršenje transakcija. Serijalizacijski format korišten za komunikaciju je JSON.
 
 \section{Izrada transakcija}
 
@@ -251,7 +265,7 @@ Slanje čvoru (poslužitelju/rudaru) upit za stavljanje nove transakcije u bazen
 \begin{enumerate}
 	\item mora sadržavati sva očekivana polja
 	\item mora biti jedinstvena (provjerava se kako nebi došlo do malicioznog replay-a valjanih transakcija)
-	\item mora imati valjani digitalni potpis (korištena shema iz specifikacije FIPS-186-3)
+	\item mora imati valjani digitalni potpis (korištena je shema iz specifikacije FIPS-186-3)
 	\item sažetak javnog ključa mora odgovarati izvorišnoj adresi
 	\item provjeravaju se povijesne transakcije izvorišne adrese da se ustvrdi ima li dovoljno sredstava da obavi transakciju koju želi
 \end{enumerate}
